1.73:
  Added feature MR-16 - Add keyboard shortcuts to switch between tabs
  Added feature MR-141 - Add a default protocol option
  Added feature MR-547 - Add support for Xming Portable PuTTY
  Made improvement MR-367 - Make the 'Connect' button on the 'Quick Connect' toolbar a forced dropdown
  Made improvement MR-590 - Make panels docked to the edge of the window keep their size
  Added "Reset" to config panel context menu to allow resetting some config settings to their default value.
  Removed misleading log messages about RD Gateway support.
  Removed invalid "Site" configuration option from PuTTY Saved Sessions.
  Fixed PuTTY Saved Sessions still showing if all saved sessions are removed.
  Fixed config panel showing settings from previously loaded connection file after loading a new one.
  Improved handling of variables in external tool arguments.

1.72 (2013-11-13):
  Fixed issue MR-592 - Unable to run VBS script as an external tool
  Fixed issue MR-596 - Incorrect escaping of quotation marks in external tool arguments

1.71 (2013-10-29):
  Fixed issue MR-574 - Crash when retrieving RDP session list if eolwtscom.dll is not registered
  Fixed issue MR-578 - Connections file is reset
  Fixed log file not showing operating system version on Windows XP and Windows Server 2003.
  Fixed the wrong connections file opening on startup under certain conditions.
  Fixed checking for updates even when disabled.
  Improved error reporting when loading connections files.
  Removed warning message when mRemoteNG is started for the first time about new connections file being created.

1.71 Release Candidate 2 (2013-10-16):
  Fixed issue MR-560 - Cannot Auto-Update With Open Connections: Unable to find an entry point named 'TaskDialogIndirect' in DLL 'ComCtl32'
  Fixed issue MR-565 - Double Folder keep heritage on the initial Folder
  Fixed issue MR-566 - Typo in German UI Automatic Update Settings